finished home page

--- a/index.html
+++ b/index.html
@@ -7,15 +7,77 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/background_shape.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="">
-      <h1>Pu Thavikulwat</h1>
-      <h2>Code-tailored Designer</h2>
-      <h3>Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
-        that are not only practical, but also give users meaningful experience, and
-        form personal connections with them on a daily basis.</h3>
-    </div>
+    <div class="overlay"></div>
+    <section class="intro-container">
+      <div class="intro">
+        <h1 class="bold">Pu Thavikulwat</h1>
+        <h2 class="bold">Code-tailored Designer</h2>
+        <h3 class="intro-desc">Hi, I’m Pu. I am a UX designer with technical experience. I design solutions
+          that are not only practical, but also give users meaningful experience, and
+          form personal connections with them on a daily basis.</h3>
+      </div>
+    </section>
+
+    <section class="case-studies">
+      <h2 class="case-studies-title bold">Case Studies</h2>
+      <div class="card-container">
+        <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
+        <h4 class="ux-tag">UX Design</h4>
+        <div class="description-container" id="ourdate-description">
+          <h5 class="bold">Ourdate</h5>
+          <p>A new dating app that introduces a more natural and authentic way of dating.</p>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <img src="img/mindfulmates_poster.png" alt="MindfulMates Case Study" class="image-poster">
+        <h4 class="product-tag">Product Design</h4>
+        <div class="description-container" id="mindfulmates-description">
+          <h5 class="bold">MindfulMates</h5>
+          <p>A pair of little robots that enhances communication between couples.</p>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <img src="img/mercular_poster.png" alt="Mercular Case Study" class="image-poster">
+        <h4 class="ux-tag">UX Design</h4>
+        <div class="description-container" id="mercular-description">
+          <h5 class="bold">Mercular Wishlist</h5>
+          <p>A feature that provides meaningful and engaging way for users to save their product.</p>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="case-studies">
+      <h2 class="case-studies-title bold">Coding</h2>
+      <div class="card-container">
+        <img src="img/beatbuddy_poster2.png" alt="BEatBuddy Showcase" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="beatbuddy-description">
+          <h5 class="bold">BeatBuddy</h5>
+          <p>A website that crafts you personalized playlists based on your music taste.</p>
+        </div>
+      </div>
+
+      <div class="card-container">
+        <img src="img/markthai_poster.png" alt="Mark Thai Food Box Showcase" class="image-poster">
+        <h4 class="coding-tag">Coding</h4>
+        <div class="description-container" id="markthai-description">
+          <h5 class="bold">Mark Thai Food Box</h5>
+          <p>An e-commerce site for a Thai restaurant in Seattle, WA.</p>
+        </div>
+      </div>
+
+    </section>
+
 
   </body>
 </html>
