--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <script src="navbar.js"></script>
     <link rel="stylesheet" href="css/background_shape.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +17,42 @@
   </head>
   <body>
     <div class="overlay"></div>
+
+    <header id="nav-menu">
+      <nav class="navbar">
+        <a id="logo" href="/">
+          <span id="logo-text">Pu Thavikulwat</span>
+          <!-- <img id="logo-img" src="img/pu_logo.png"> -->
+        </a>
+
+        <ul class="nav-links">
+          <div class="menu">
+            <li><a href="/">Case Studies</a></li>
+            <li><a href="/">Coding</a></li>
+            <li><a href="/">About Me</a></li>
+          </div>
+        </ul>
+      </nav>
+
+      <div class="navbar-mobile-container">
+        <nav class="navbar-top-mobile">
+          <a href="/">
+            <img id="logo-img-mobile" src="img/pu_logo.png" alt="Pu Thavi Logo">
+          </a>
+          <img id="hamburger-mobile" src="img/hamburger_menu.svg" alt="Hamburger Menu">
+        </nav>
+
+        <nav class="navbar-mobile">
+          <ul>
+            <li><a href="/">Case Studies</a></li>
+            <li><a href="/">Coding</a></li>
+            <li><a href="/">About Me</a></li>
+          </ul>
+        </nav>
+      </div>
+
+    </header>
+
     <section class="intro-container">
       <div class="intro">
         <h1 class="bold">Pu Thavikulwat</h1>
@@ -32,7 +70,7 @@
         <h4 class="ux-tag">UX Design</h4>
         <div class="description-container" id="ourdate-description">
           <h5 class="bold">Ourdate</h5>
-          <p>A new dating app that introduces a more natural and authentic way of dating.</p>
+          <p>A new dating app that introduces a more natural and authentic way of dating • 2023</p>
         </div>
       </div>
 
@@ -41,7 +79,7 @@
         <h4 class="product-tag">Product Design</h4>
         <div class="description-container" id="mindfulmates-description">
           <h5 class="bold">MindfulMates</h5>
-          <p>A pair of little robots that enhances communication between couples.</p>
+          <p>A pair of little robots that enhances communication between couples • 2022</p>
         </div>
       </div>
 
@@ -50,7 +88,7 @@
         <h4 class="ux-tag">UX Design</h4>
         <div class="description-container" id="mercular-description">
           <h5 class="bold">Mercular Wishlist</h5>
-          <p>A feature that provides meaningful and engaging way for users to save their product.</p>
+          <p>A feature that provides meaningful and engaging way for users to save their product • 2022</p>
         </div>
       </div>
 
@@ -63,7 +101,7 @@
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="beatbuddy-description">
           <h5 class="bold">BeatBuddy</h5>
-          <p>A website that crafts you personalized playlists based on your music taste.</p>
+          <p>A website that crafts you personalized playlists based on your music taste • 2023</p>
         </div>
       </div>
 
@@ -72,7 +110,7 @@
         <h4 class="coding-tag">Coding</h4>
         <div class="description-container" id="markthai-description">
           <h5 class="bold">Mark Thai Food Box</h5>
-          <p>An e-commerce site for a Thai restaurant in Seattle, WA.</p>
+          <p>An e-commerce site for a Thai restaurant in Seattle, WA • 2022</p>
         </div>
       </div>
 
