--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- ? Put this in every page to populate navbar -->
     <script src="navbar.js"></script>
+    <link rel="icon" type="image/png" href="img/favicon_pu.png">
     <link rel="stylesheet" href="css/navbar.css">
-
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
