--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,6 @@
+<!-- ! This page doesn't interact with anything on this website.
+! It's only here to store the original code for the navbar -->
+
 <header id="nav-menu">
   <nav class="navbar">
     <a id="logo" href="/">
