disable scroll animation if screen width < 700px

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <script src="index.js"></script>
     <script defer src="layout.js"></script>
 
-    <!-- ? Put this in every page to populate navbar -->
+    <!-- * Put this in every page to populate navbar -->
     <script src="navbar.js"></script>
-    <link rel="icon" type="image/png" href="img/favicon_pu.png">
     <link rel="stylesheet" href="css/navbar.css">
+    <!-- * Put this in every page to populate navbar -->
+
+    <link rel="icon" type="image/png" href="img/favicon_pu.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/layout.css">
@@ -28,6 +30,7 @@
 
     <!-- * Put this in every page to populate navbar -->
     <div id="nav-placeholder"></div>
+    <!-- * Put this in every page to populate navbar -->
 
     <section class="intro-container hide-long">
       <div class="intro">
