--- a/about.html
+++ b/about.html
@@ -3,32 +3,50 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>About Me</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
 
-    <!-- ? include this part to add navbar for every page -->
+    <!-- * Put this in every page to populate navbar -->
     <script src="navbar.js"></script>
     <link rel="stylesheet" href="css/navbar.css">
+    <!-- * Put this in every page to populate navbar -->
+
+    <script src="layout.js"></script>
+    <link rel="icon" type="image/png" href="img/favicon_pu.png">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <script src="" async defer></script>
-  </body>
 
-  <!-- ? include this part to add navbar for every page -->
-  <script>
-    // Use JavaScript to load the navbar into the container div
-    document.addEventListener('DOMContentLoaded', function() {
-      fetch('navbar.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('nav-placeholder').innerHTML = data;
-      })
-      .catch(error => {
-        console.log(error);
-      });
-    });
-  </script>
+    <div class="overlay"></div>
+
+    <!-- * Put this in every page to populate navbar -->
+    <div id="nav-placeholder"></div>
+    <!-- * Put this in every page to populate navbar -->
+
+    <section class="grid-container">
+      <div class="picture">
+        <img src="img/me_1.png" class="hide-long img-stack" alt="A picture of myself">
+        <img src="img/me_2.png" class="hide-long img-stack" alt="A picture of myself">
+        <img src="img/me_3.png" class="hide-long img-stack" alt="A picture of myself">
+      </div>
+      <div class="about-me hide-long">
+        <h1 class="bold">About Me</h1>
+        <h4>Hi, I’m Pu! Currently studying Computer Science at University of Washington. I grew up in Bangkok, Thailand and have lived there for 18 years. Currently, I am living in Seattle, WA.</h4>
+        <h4>I decided to make a switch from Software Engineering to UX Design after my first UX Design internship. While I enjoy programming and its technical aspect, I have always been a visual person who likes everyday design. UX Design, for me, gives me a way to solve problems and give people meaningful experiences through incorporating both technical work and visual creativity.</h4>
+        <h4>Outside of work, I enjoy traveling to different parts of the world 🛩️, playing video games 🎮, and watching anime.</h4>
+      </div>
+    </section>
+
+  </body>
 
 </html>
