--- a/about.html
+++ b/about.html
@@ -48,24 +48,28 @@
       </div>
     </section>
 
-    <div class="mobile-container">
-      <div class="carousel-wrapper">
-        <div class="carousel">
-          <img src="img/me_1.png" id='1' class="carousel-photo initial" alt="A picture of myself">
-          <img src="img/me_2.png" id='2' class="carousel-photo" alt="A picture of myself">
-          <img src="img/me_3.png" id='3' class="carousel-photo" alt="A picture of myself">
-          <div class="carousel-button-next"></div>
-          <div class="carousel-button-prev"></div>
-          <div class="indicator-container">
-            <div class="indicator initial"></div>
-            <div class="indicator"></div>
-            <div class="indicator"></div>
+    <div class="background-wrapper">
+      <div class="mobile-container">
+        <div class="carousel-wrapper">
+          <div class="carousel">
+            <img src="img/me_1.png" id='1' class="carousel-photo initial" alt="A picture of myself">
+            <img src="img/me_2.png" id='2' class="carousel-photo" alt="A picture of myself">
+            <img src="img/me_3.png" id='3' class="carousel-photo" alt="A picture of myself">
+            <div class="carousel-button-next"></div>
+            <div class="carousel-button-prev"></div>
+            <div class="indicator-container">
+              <div class="indicator initial"></div>
+              <div class="indicator"></div>
+              <div class="indicator"></div>
+            </div>
           </div>
-
         </div>
+        <h1 class="bold">About Me</h1>
+        <h4>Hi, I’m Pu! Currently studying Computer Science at University of Washington. I grew up in Bangkok, Thailand and have lived there for 18 years. Currently, I am living in Seattle, WA.</h4>
+        <h4>I decided to make a switch from Software Engineering to UX Design after my first UX Design internship. While I enjoy programming and its technical aspect, I have always been a visual person who likes everyday design. UX Design, for me, gives me a way to solve problems and give people meaningful experiences through incorporating both technical work and visual creativity.</h4>
+        <h4>Outside of work, I enjoy traveling to different parts of the world 🛩️, playing video games 🎮, and watching anime.</h4>
       </div>
     </div>
-
 
   </body>
 
