--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="index.js"></script>
-    <script defer src="layout.js"></script>
 
-    <!-- * Put this in every page to populate navbar -->
+    <!-- & Put this in every page to use scrolling animation -->
+    <script defer src="layout.js"></script>
+    <link rel="stylesheet" href="css/layout.css">
+    <!-- & Put this in every page to use scrolling animation -->
+
+    <!-- & Put this in every page to populate navbar -->
     <script src="navbar.js"></script>
     <link rel="stylesheet" href="css/navbar.css">
-    <!-- * Put this in every page to populate navbar -->
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- & Put this in every page to populate navbar -->
 
     <link rel="icon" type="image/png" href="img/favicon_pu.png">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/layout.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -28,9 +31,9 @@
 
     <div class="overlay"></div>
 
-    <!-- * Put this in every page to populate navbar -->
+    <!-- & Put this in every page to populate navbar -->
     <div id="nav-placeholder"></div>
-    <!-- * Put this in every page to populate navbar -->
+    <!-- & Put this in every page to populate navbar -->
 
     <section class="intro-container hide-long">
       <div class="intro">
@@ -45,14 +48,14 @@
     <section class="case-studies">
       <h2 class="case-studies-title bold hide">Case Studies</h2>
 
-      <div class="card-container hide">
+      <a href="/ourdate.html" class="card-container hide">
         <img src="img/ourdate_poster.png" alt="Ourdate Case Study" class="image-poster">
         <h4 class="ux-tag">UX Design</h4>
         <div class="description-container" id="ourdate-description">
           <h5 class="bold">Ourdate</h5>
           <p>A new dating app that introduces a more natural and authentic way of dating • 2023</p>
         </div>
-      </div>
+      </a>
 
       <div class="card-container hide">
         <img src="img/mindfulmates_poster.png" alt="MindfulMates Case Study" class="image-poster">
