--- a/ourdate.html
+++ b/ourdate.html
@@ -113,22 +113,41 @@
         </div>
       </section>
     </div>
-    <section class="content-container-2" id="feature-1">
+    <section class="content-container-v2 blue-background" id="feature-1">
       <span class="feature-text">Feature 1</span>
       <h2>Ourdate Dating Profile Redesign</h2>
-      <h3>I worked alongside two other designers to redesign the profile page of Ourdate app.</h3>
+      <h3 class="hide">I worked alongside two other designers to redesign the profile page of Ourdate app.</h3>
       <h3>&nbsp;</h3>
-      <h3 class="bold">The Problem:</h3>
-      <h3>The original profile page design <span class="bold">fails</span> to communicate our app goal of encouraging users to meet each other in-person.</h3>
-      <img src="img/old_profile.png" id="old-profile" alt="Image of the old profile design">
-      <h3>Based on multiple testing sessions we conducted with Ourdate users, the original profile <span class="bold">doesn’t show enough ‘personality’</span> of that a person despite having lots of information about them.</h3>
+      <h3 class="bold hide">The Problem:</h3>
+      <h3 class="hide">The original profile page design <span class="bold">fails</span> to communicate our app goal of encouraging users to meet each other in-person.</h3>
+      <img src="img/old_profile.png" class="hide-long" id="old-profile" alt="Image of the old profile design">
+      <h3 class="hide">Based on multiple testing sessions we conducted with Ourdate users, the original profile <span class="bold">doesn’t show enough ‘personality’</span> of that a person despite having lots of information about them.</h3>
       <h3>&nbsp;</h3>
-      <h3>We spent a lot of time researching and brainstorming on ways to bring life out of the profile page. Through conducting interviews, it became evident that showcasing images or videos of users doing their favorite activities is an effective and natural way to show their personality.</h3>
+      <h3 class="hide">We spent a lot of time researching and brainstorming on ways to bring life out of the profile page. Through conducting interviews, it became evident that showcasing images or videos of users doing their favorite activities is an effective and natural way to show their personality.</h3>
       <h3>&nbsp;</h3>
-      <h3>We synthesized all of the findings we got from user testing and went through multiple design iterations and feedback session from both our users and the design team.</h3>
+      <h3 class="hide">We synthesized all of the findings we got from user testing and went through multiple design iterations and feedback session from both our users and the design team.</h3>
       <h3>&nbsp;</h3>
       <h3 class="bold">Final Profile Redesign:</h3>
-      <img src="img/new_profile.png" alt="Image of the new profile design">
+      <h3>&nbsp;</h3>
+      <img src="img/new_profile.png" class="hide-long" id="new-profile" alt="Image of the new profile design">
+    </section>
+
+    <section class="content-container-v2" id="feature-1">
+      <span class="feature-text">Feature 2</span>
+      <h2>Ourdate Dating Hangout Feature</h2>
+      <h3 class="hide">Ourdate Hangout is a feature I brainstormed as a <span class="bold">solution to the Pen Pal Syndrome</span>, which is a common problem for many dating app users.</h3>
+      <h3>&nbsp;</h3>
+      <h3 class="hide">According to user research, most participants think the idea of going to public events to do activities together is a great way to connect with other singles. However, many feel anxious to go to big public events alone.</h3>
+      <h3>&nbsp;</h3>
+      <h3 class="hide">To make attending public events a less anxious experience, I came up with the Ourdate Hangout feature: </h3>
+      <h3>&nbsp;</h3>
+      <div class="video-container">
+        <video autoplay controls>
+          <source src="video/OD_hangout.mp4" source="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <h3>I thought about the idea of users matching and meeting up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public events together.</span></h3>
+      </div>
     </section>
   </body>
 </html>
