--- a/ourdate.html
+++ b/ourdate.html
@@ -113,7 +113,7 @@
         </div>
       </section>
     </div>
-    <section class="content-container-v2 blue-background" id="feature-1">
+    <section class="content-container-v2 blue-background">
       <span class="feature-text">Feature 1</span>
       <h2>Ourdate Dating Profile Redesign</h2>
       <h3 class="hide">I worked alongside two other designers to redesign the profile page of Ourdate app.</h3>
@@ -132,7 +132,7 @@
       <img src="img/new_profile.png" class="hide-long" id="new-profile" alt="Image of the new profile design">
     </section>
 
-    <section class="content-container-v2" id="feature-1">
+    <section class="content-container-v2">
       <span class="feature-text">Feature 2</span>
       <h2>Ourdate Dating Hangout Feature</h2>
       <h3 class="hide">Ourdate Hangout is a feature I brainstormed as a <span class="bold">solution to the Pen Pal Syndrome</span>, which is a common problem for many dating app users.</h3>
@@ -146,8 +146,18 @@
           <source src="video/OD_hangout.mp4" source="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <h3>I thought about the idea of users matching and meeting up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public events together.</span></h3>
+        <h3>Users can match and meet up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public dating events together.</span></h3>
       </div>
     </section>
+
+    <section class="content-container-v2 blue-background">
+      <span class="feature-text">Feature 3</span>
+      <h2>Ourdate GuruFox - Intelligent date planner</h2>
+      <h3>&nbsp;</h3>
+      <h3 class="hide">From the user research we conducted, it became clear that a substantial number of participants experience difficulty in planning their dates. It’s often a cycle of endless questions back and forth from each side, asking each other what they like and where they want to go.</h3>
+      <h3>&nbsp;</h3>
+      <h3 class="hide">In order to give users a better experience planning their dates, I designed the GuruFox feature, an intelligent date planner for Ourdate users.</h3>
+    </section>
+
   </body>
 </html>
