--- a/ourdate.html
+++ b/ourdate.html
@@ -33,8 +33,8 @@
 
     <img src="img/ourdate_poster_big.png" class="hide-long header-img" alt="Ourdate cover photo">
 
-    <div class="content-container">
-      <section class="project-info">
+    <section class="content-container">
+      <div class="project-info">
         <div class="timeline">
           <h2>Timeline</h2>
           <div class="detail">
@@ -55,16 +55,16 @@
             <h3>Figma, Zeplin</h3>
           </div>
         </div>
-      </section>
-      <section class="two-column section">
+      </div>
+      <div class="two-column section">
         <div class="title">
           <h2>Problem Statement</h2>
         </div>
         <div class="desc hide">
           <h3>Online dating nowadays are so focused on the “swiping left and right” mentality. This in the long run can give users burnout from bad experiences like catfishing, ghosting, trust issues, and Pen Pal Syndrome*.</h3>
         </div>
-      </section>
-      <section class="two-column section">
+      </div>
+      <div class="two-column section">
         <div class="title">
           <h2>Solution Overview</h2>
         </div>
@@ -72,8 +72,8 @@
           <h3>Ourdate is a community-based dating app that focuses on in-person meeting. Singles can meet other singles in public events first before connecting with each other individually.</h3>
           <h3>Ourdate’s mission is to stop dating burnouts and gives users a new way to make dating an enjoyable and fulfilling experience.</h3>
         </div>
-      </section>
-      <section class="two-column section">
+      </div>
+      <div class="two-column section">
         <div class="title">
           <h2>Roles and Responsibilities</h2>
         </div>
@@ -86,8 +86,8 @@
             <li>Maintained and regularly updated design specifications, and strategically revised the design system to facilitate the development process.</li>
           </ul>
         </div>
-      </section>
-      <section class="two-column section">
+      </div>
+      <div class="two-column section">
         <div class="title">
           <h2>Goals</h2>
         </div>
@@ -116,6 +116,7 @@
     <section class="content-container-v2 blue-background">
       <span class="feature-text">Feature 1</span>
       <h2>Ourdate Dating Profile Redesign</h2>
+      <h3>&nbsp;</h3>
       <h3 class="hide">I worked alongside two other designers to redesign the profile page of Ourdate app.</h3>
       <h3>&nbsp;</h3>
       <h3 class="bold hide">The Problem:</h3>
@@ -135,6 +136,7 @@
     <section class="content-container-v2">
       <span class="feature-text">Feature 2</span>
       <h2>Ourdate Dating Hangout Feature</h2>
+      <h3>&nbsp;</h3>
       <h3 class="hide">Ourdate Hangout is a feature I brainstormed as a <span class="bold">solution to the Pen Pal Syndrome</span>, which is a common problem for many dating app users.</h3>
       <h3>&nbsp;</h3>
       <h3 class="hide">According to user research, most participants think the idea of going to public events to do activities together is a great way to connect with other singles. However, many feel anxious to go to big public events alone.</h3>
@@ -142,11 +144,11 @@
       <h3 class="hide">To make attending public events a less anxious experience, I came up with the Ourdate Hangout feature: </h3>
       <h3>&nbsp;</h3>
       <div class="video-container">
-        <video autoplay controls>
+        <video class="hide" autoplay controls>
           <source src="video/OD_hangout.mp4" source="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <h3>Users can match and meet up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public dating events together.</span></h3>
+        <h3 class="hide-long">Users can match and meet up with a smaller group of people on the Ourdate app. Then, after talking to each other, they can choose to <span class="bold">attend public dating events together.</span></h3>
       </div>
     </section>
 
@@ -157,7 +159,83 @@
       <h3 class="hide">From the user research we conducted, it became clear that a substantial number of participants experience difficulty in planning their dates. It’s often a cycle of endless questions back and forth from each side, asking each other what they like and where they want to go.</h3>
       <h3>&nbsp;</h3>
       <h3 class="hide">In order to give users a better experience planning their dates, I designed the GuruFox feature, an intelligent date planner for Ourdate users.</h3>
+      <h3>&nbsp;</h3>
+      <div class="video-container">
+        <video class="hide" autoplay controls>
+          <source src="video/guru_fox.mp4" source="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <h3 class="hide-long">GuruFox takes into account the profile information from both the user and their date, combined with the user's specified input, to curate a personalized date plan that they will both like.</h3>
+      </div>
     </section>
+
+    <section class="content-container">
+      <div class="two-column">
+        <div class="title">
+          <h2>Usability Testing</h2>
+        </div>
+        <div class="desc hide">
+          <h3>After a discussion with the engineering team on the feasibility of my ideas, I developed a higher-fidelity design for my ideas and conducted usability testing with 12 participants.</h3>
+          <h3>&nbsp;</h3>
+          <h3>I wrote a detailed testing script with clear goals and objectives that I hope to get from the users. During the testing session, I assigned participants specific tasks to complete and observed them through screen sharing. I asked them follow-up questions and gathered any suggestions they might have.</h3>
+          <h3>&nbsp;</h3>
+          <h3>I then mapped out all of the insights and made multiple iterations on my design. From talking with the participants, I received lots of important insights that helped answer many of the concerns and questions I initially had.</h3>
+        </div>
+      </div>
+      <div class="two-column section">
+        <div class="title">
+          <h2>Outcome</h2>
+        </div>
+        <div class="desc hide">
+          <h3>Although the features I designed weren’t fully implemented during my internship, the feedback received during the usability tests was positive:</h3>
+          <ul>
+            <li>The profile redesign saw a 83% increase in user-satisfaction compared to the old design based on our usability testing.</li>
+            <li>A significant portion of the participants (67%) agreed that The Ourdate ‘Hangout’ Feature will help reduce their anxiety going to public meetups.</li>
+            <li>The majority of participants (75%) agreed that their experience of planning dates would be easier with the GuruFox feature.</li>
+          </ul>
+          <h3>The constructive feedback from the usability testing reinforced my confidence in the design decision I made, demonstrating the potential value these features could add for a broader user base.</h3>
+        </div>
+      </div>
+      <div class="two-column section">
+        <div class="title">
+          <h2>Next Steps</h2>
+        </div>
+        <div class="desc hide">
+          <h3>Due to the company's limited resources, I wasn’t able to conduct quantitative research and collect numerical data that can be analyzed to draw reliable conclusions on a large user base.</h3>
+          <h3>&nbsp;</h3>
+          <h3>Although I was able to gather a lot of qualitative insights, there were still a few quantitative metrics I wish I could have measured:
+          </h3>
+          <ol>
+            <li>User engagement rate:
+              <ul>
+                <li>How much interaction does the average profile / hangout / GuruFox page receive?</li>
+              </ul>
+            </li>
+            <li>Visit duration
+              <ul>
+                <li>How much time are users spending on the Ourdate app during a single visit?</li>
+              </ul>
+            </li>
+            <li>Retention rate:
+              <ul>
+                <li>How many % of Ourdate users return to the app after their first visit?</li>
+              </ul>
+            </li>
+          </ol>
+        </div>
+      </div>
+    </section>
+
+    <div class="content-container-v2 blue-background">
+      <h3 class="hide-long">“Pu is a true professional who always goes above and beyond to update and improve his work. He has a keen eye for detail and takes the time to understand the needs and preferences of the end-users. Pu's commitment to continuous improvement is truly admirable, as he constantly seeks new ways to enhance the user experience and stay up-to-date with the latest design trends and technologies.”</h3>
+      <h3>&nbsp;</h3>
+      <h3 class="bold">Dora Lohas - CEO of Ourdate</h3>
+    </div>
+    <h3>&nbsp;</h3>
+
+    <footer>
+      <h4>Designed and Coded by Pu Thavikulwat</h4>
+    </footer>
 
   </body>
 </html>
